--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Araucaria</title>
+
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 
 
@@ -39,24 +42,35 @@
 
         <!-- <h1>La Araucaria</h1> -->
 
-        <div class="gallery">
+        <div class="a">a</div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem amet, eaque 
+            excepturi cumque omnis harum quaerat doloremque neque ut 
+            soluta distinctio laudantium, animi, exercitationem sunt consectetur 
+            ipsa nostrum iusto in.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem amet, eaque 
+            excepturi cumque omnis harum quaerat doloremque neque ut 
+            soluta distinctio laudantium, animi, exercitationem sunt consectetur 
+            ipsa nostrum iusto in.</p>
+
+        <div class="gallery" >
 
 
-            <div class="galeria1a">
+
+            <div class="galeria1a" data-aos="zoom-in">
                  <!-- <img src="/Web/Pruebas/suculentas1/img/galeria1.jpg" alt="" class="imgGal1"> -->
             </div> 
 
-            <div class="galeria2a">
+            <div class="galeria2a" data-aos="zoom-in">
                 <!-- <img src="/Web/Pruebas/suculentas1/img/galeria2.jpg" alt="" class="imgGal2">
      -->
             </div> 
 
 
-           <div class="galeria3a">
+           <div class="galeria3a" data-aos="zoom-in">
             <!-- <img src="/Web/Pruebas/suculentas1/img/galeria2.jpg" alt=""> -->
            </div>
 
-           <div class="galeria4a">
+           <div class="galeria4a" data-aos="zoom-in">
 
            </div>
             
@@ -79,6 +93,10 @@
 
 
     <script src="cerebro.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
     
 </body>
 </html>
